# squash

./: .appveyor.yml  .configure-custom.sh  .dir-locals.el  .gitignore  .gitmodules  .travis.sh  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  Makefile.am  NEWS  README  annotated.html  appveyor.yml  autogen.sh  buffer-stream_8c_source.html  buffer_8c_source.html  build-deps.catalog  codec_8c_source.html  codec_8h_source.html  configure  configure.ac  context_8c_source.html  context_8h_source.html  dir_763eb5621c1872de56f764b67d67f521.html  examples.html  files.html  functions_vars.html  git.mk  group__SquashCodec.html  group__SquashOptions.html  group__SquashStream.html  index.html  index_8md_source.html  lz4_8md_source.html  lzf_8md_source.html  lzo_8md_source.html  md_bzip2.html  md_fastlz.html  (+23 more)
benchmark/: CMakeLists.txt  Makefile.am  benchmark-footer.html  benchmark-header.html  benchmark.c  benchmark.js  index.html  json-writer.c  json-writer.h  timer.c  timer.h
bindings/vala/: .gitignore  CMakeLists.txt  Makefile.am  squash.vapi
docs/: CMakeLists.txt  CONTRIBUTING.org  Doxyfile.in  Makefile.am  building.md  index.md  internals.md  plugin-guide.md  squash.1  user-guide.md
docs/CLA/: CLA.txt  Evan-Nemerson.sig  Jeremy-Thien.sig  Markus-Knetschke.sig  Nate-Clark.sig
examples/: .gitignore  CMakeLists.txt  Makefile.am  simple.c  stream.c
m4/: ax_ext.m4  (+4 more)
plugins/: .gitignore  CMakeLists.txt  Makefile.am  plugins.md
plugins/blosc/: CMakeLists.txt  Makefile.am  blosc.codecs  blosc.m4  blosc.md  squash-blosc.c
plugins/brieflz/: CMakeLists.txt  brieflz.md  squash-brieflz.c  squash.ini
plugins/brotli/: CMakeLists.txt  brotli.codecs  brotli.md  squash-brotli.c  squash-brotli.cpp  squash.ini
plugins/bsc/: CMakeLists.txt  bsc.codecs  bsc.md  squash-bsc.c  squash.ini
plugins/bzip2/: CMakeLists.txt  Makefile.am  bzip2.md  squash-bzip2.c  squash.ini
plugins/copy/: CMakeLists.txt  copy.md  squash-copy.c  squash.ini
plugins/crush/: CMakeLists.txt  crush.c  crush.codecs  crush.h  crush.md  squash-crush.c  squash.ini
plugins/csc/: CMakeLists.txt  csc.md  squash-csc.cpp  squash.ini
plugins/density/: CMakeLists.txt  density.md  squash-density.c  squash.ini
plugins/doboz/: CMakeLists.txt  Makefile.am  doboz.codecs  doboz.m4  doboz.md  squash-doboz.cpp  squash.ini
plugins/fari/: CMakeLists.txt  fari.codecs  fari.md  squash-fari.c  squash.ini
plugins/fastlz/: CMakeLists.txt  Makefile.am  squash-fastlz.c  squash.ini
plugins/gipfeli/: CMakeLists.txt  gipfeli.codecs  gipfeli.md  squash-gipfeli.cpp  squash.ini
plugins/heatshrink/: CMakeLists.txt  heatshrink.md  squash-heatshrink.c  squash.ini
plugins/ipp/: CMakeLists.txt  Makefile.am  ipp.codecs  ipp.m4  ipp.md  squash-ipp.c  squash.ini
plugins/libdeflate/: CMakeLists.txt  libdeflate.md  squash-libdeflate.c  squash.ini
plugins/lz4/: CMakeLists.txt  Makefile.am  lz4.m4  lz4.md  squash-lz4.c  squash-lz4f.c  squash.ini
plugins/lzf/: CMakeLists.txt  Makefile.am  lzf.m4  lzf.md  squash-lzf.c  squash.ini
plugins/lzfse/: CMakeLists.txt  lzfse.md  squash-lzfse.c  squash.ini
plugins/lzg/: CMakeLists.txt  Makefile.am  lzg.codecs  lzg.m4  lzg.md  squash-lzg.c  squash.ini
plugins/lzham/: CMakeLists.txt  lzham.codecs  lzham.md  squash-lzham.c  squash.ini
plugins/lzham1/: Makefile.am
plugins/lzjb/: CMakeLists.txt  Makefile.am  lzjb.codecs  lzjb.m4  lzjb.md  squash-lzjb.c  squash.ini
plugins/lzma/: .gitignore  CMakeLists.txt  Makefile.am  config.h.in  lzma.m4  lzma.md  squash-lzma.c  squash.ini
plugins/lzmat/: CMakeLists.txt  Makefile.am  lzmat.codecs  lzmat.m4  lzmat.md  squash-lzmat.c  squash.ini
plugins/lzo/: CMakeLists.txt  Makefile.am  lzo.codecs  lzo.m4  lzo.md  squash-lzo.c  squash.ini
plugins/miniz/: CMakeLists.txt  miniz.md  squash-miniz.c  squash.ini
plugins/ms-compress/: CMakeLists.txt  ms-compress.codecs  ms-compress.md  squash-ms-compress.c  squash.ini
plugins/ncompress/: CMakeLists.txt  compress.c  compress.h  ncompress.md  squash-ncompress.c  squash.ini
plugins/pithy/: CMakeLists.txt  pithy.md  squash-pithy.c  squash.ini
plugins/quicklz/: CMakeLists.txt  Makefile.am  quicklz.codecs  squash-quicklz.c  squash.ini
plugins/sharc/: CMakeLists.txt  Makefile.am  sharc.codecs  sharc.m4  sharc.md  squash-sharc-stream.c  squash-sharc-stream.h  squash-sharc.c  squash.ini
plugins/snappy/: .gitignore  CMakeLists.txt  Makefile.am  config.h.in  crc32.c  crc32.h  snappy-stubs-public.h.in  snappy.codecs  snappy.m4  snappy.md  squash-snappy-framed.c  squash-snappy.c  squash.ini
plugins/wflz/: CMakeLists.txt  Makefile.am  squash-wflz.c  squash.ini  wflz.codecs  wflz.m4  wflz.md
plugins/wimlib/: CMakeLists.txt  squash-wimlib.c  squash.ini
plugins/windows/: CMakeLists.txt  squash-windows.c  squash.ini  windows.md
plugins/yalz77/: CMakeLists.txt  squash-yalz77.cpp  squash.ini  yalz77.md
plugins/zlib/: CMakeLists.txt  Makefile.am  squash-zlib.c  squash-zlib.h  squash.ini  zlib.codecs  zlib.m4
plugins/zlib-ng/: CMakeLists.txt  squash-zlib-ng.c  squash.ini  zlib-ng.md
plugins/zling/: CMakeLists.txt  squash-zling.cpp  squash.ini  zling.codecs  zling.md
squash/: .gitignore  CMakeLists.txt  Makefile.am  SquashConfig.cmake.in  buffer-internal.h  buffer-stream-internal.h  buffer-stream.c  buffer.c  charset-internal.h  charset.c  codec-internal.h  codec.c  codec.h  config.h.in  context-internal.h  context.c  context.h  file.c  file.h  ini-internal.h  ini.c  ini.rl  internal.h  license.c  license.h  mapped-file-internal.h  mapped-file.c  memory-internal.h  memory.c  memory.h  mtx-internal.h  object.c  object.h  options.c  options.h  plugin-internal.h  plugin.c  plugin.h  slist-internal.h  splice.c  (+63 more)
tests/: .gitignore  CMakeLists.txt  Makefile.am  bounds.c  buffer.c  check-plugins.c  file.c  flush.c  in-place.c  interop.c  random-data.c  single-byte.c  splice.c  stream-compress.c  stream-decompress.c  stream-single-byte.c  stream.c  test-codecs.c  test-codecs.h  test-squash.h  test.c  threads.c  version.c
utils/: .gitignore  CMakeLists.txt  Makefile.am  parg.c  parg.h  squash-fuzzer.c  squash.c
(+379 files in other folders)
